--- a/Clase3-DirectivasYForms/directivasapp/src/app/components/tabla-alumnos/tabla-alumnos.component.html
+++ b/Clase3-DirectivasYForms/directivasapp/src/app/components/tabla-alumnos/tabla-alumnos.component.html
@@ -1,1 +1,14 @@
-<p>tabla-alumnos works!</p>
+<table class="table table-bordered">
+  <tr>
+    <th>Nombre</th>
+    <th>Apellido</th>
+    <th>Curso</th>
+  </tr>
+
+  <!-- interpolar los elementos de la lista alumnos usando un ngFor (parecido a un foreach) -->
+  <tr *ngFor="let alumno of alumnos">
+    <td>{{ alumno.nombre }}</td>
+    <td>{{ alumno.apellido }}</td>
+    <td>{{ alumno.curso }}</td>
+  </tr>
+</table>
