add data and event binding examples

--- a/Clase3-DirectivasYForms/directivasapp/src/app/components/tabla-alumnos/tabla-alumnos.component.html
+++ b/Clase3-DirectivasYForms/directivasapp/src/app/components/tabla-alumnos/tabla-alumnos.component.html
@@ -6,9 +6,31 @@
   </tr>
 
   <!-- interpolar los elementos de la lista alumnos usando un ngFor (parecido a un foreach) -->
-  <tr *ngFor="let alumno of alumnos">
+  <tr *ngFor="let alumno of alumnos" (click)="varAlumno(alumno)">
     <td>{{ alumno.nombre }}</td>
     <td>{{ alumno.apellido }}</td>
     <td>{{ alumno.curso }}</td>
   </tr>
 </table>
+
+<br />
+<br />
+
+<!-- mostrar un boton que ejecute la funcion establecerSaludo() -->
+<!-- su comportamiento  y apariencia depende del valor de la propiedad saludar -->
+<!-- la funcion establecerSaludo cambia el valor de saludar -->
+<button (click)="establecerSaludo()" [class]="saludar ? btnOk : btnNo">
+  Saludar
+</button>
+
+<!-- usamos un *ngIf para validar el valor de la propiedad saludar de la clase TablaAlumnosComponent -->
+<!-- dependiendo del resultado de la condicion, muestra o no el contenido -->
+<p *ngIf="saludar">Hola a todos!</p>
+
+<p [style.color]="saludar ? 'green' : 'red'">Hola a todos soy un parrafo</p>
+
+<div *ngIf="alumnoSeleccionado">
+  <app-detalle-alumno
+    [propiedadHijoAlumno]="alumnoSeleccionado"
+  ></app-detalle-alumno>
+</div>
