show detalle-alumno (data and image interpolation)

--- a/Clase3-DirectivasYForms/directivasapp/src/app/components/detalle-alumno/detalle-alumno.component.html
+++ b/Clase3-DirectivasYForms/directivasapp/src/app/components/detalle-alumno/detalle-alumno.component.html
@@ -1,1 +1,11 @@
-<p>detalle-alumno works!</p>
+<h2>Detalle del Alumno</h2>
+
+<ul>
+  <li>Nombre: {{ alumno.nombre }}</li>
+  <li>Apellido: {{ alumno.apellido }}</li>
+  <li>Curso: {{ alumno.curso }}</li>
+</ul>
+
+<br />
+
+<img [src]="alumno.foto" />
