--- a/Clase3-DirectivasYForms/bike-ui/src/app/components/home/home.component.html
+++ b/Clase3-DirectivasYForms/bike-ui/src/app/components/home/home.component.html
@@ -1,1 +1,52 @@
-<p>home works!</p>
+<div class="container">
+  <form [formGroup]="bikeForm" (ngSubmit="submitRegistration()" )>
+    <div *ngIf="validMessage != ''">
+      <h3 class="has-info">{{ validMessage }}</h3>
+    </div>
+
+    <div class="form-group">
+      <label>Buyer Name</label>
+      <input type="text" class="form-control" autofocus />
+    </div>
+
+    <div class="form-group">
+      <label>Email</label>
+      <input type="text" class="form-control" />
+    </div>
+
+    <div class="form-group">
+      <label>Phone</label>
+      <input type="text" class="form-control" />
+    </div>
+
+    <div class="form-group">
+      <label>Bike Model</label>
+      <!-- drop down para seleccionar solo 1 de los modelos posibles -->
+      <select class="form-control">
+        <option *ngFor="let model of models" [value]="model">
+          {{ model }}
+        </option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label>Bike Serial Number</label>
+      <input type="text" class="form-control" />
+    </div>
+
+    <div class="form-group">
+      <label>Purchase Price</label>
+      <input type="text" class="form-control" />
+    </div>
+
+    <div class="form-group">
+      <label>Purchase Date</label>
+      <input type="text" class="form-control" />
+    </div>
+
+    <div class="form-group">
+      <label>Contact (true | false)</label>
+      <input type="text" class="form-control" />
+    </div>
+  </form>
+</div>
