--- a/Clase3-DirectivasYForms/bike-ui/src/app/components/home/home.component.html
+++ b/Clase3-DirectivasYForms/bike-ui/src/app/components/home/home.component.html
@@ -1,28 +1,34 @@
 <div class="container">
-  <form [formGroup]="bikeForm" (ngSubmit="submitRegistration()" )>
+  <form [formGroup]="bikeForm" (ngSubmit)="submitRegistration()">
     <div *ngIf="validMessage != ''">
       <h3 class="has-info">{{ validMessage }}</h3>
     </div>
 
     <div class="form-group">
       <label>Buyer Name</label>
-      <input type="text" class="form-control" autofocus />
+      <!-- con formControlName vinculo cada entrada de la vista con su respectivo Control de TS -->
+      <input
+        type="text"
+        class="form-control"
+        formControlName="buyerName"
+        autofocus
+      />
     </div>
 
     <div class="form-group">
       <label>Email</label>
-      <input type="text" class="form-control" />
+      <input type="text" class="form-control" formControlName="email" />
     </div>
 
     <div class="form-group">
       <label>Phone</label>
-      <input type="text" class="form-control" />
+      <input type="text" class="form-control" formControlName="phone" />
     </div>
 
     <div class="form-group">
       <label>Bike Model</label>
       <!-- drop down para seleccionar solo 1 de los modelos posibles -->
-      <select class="form-control">
+      <select class="form-control" formControlName="model">
         <option *ngFor="let model of models" [value]="model">
           {{ model }}
         </option>
@@ -31,22 +37,29 @@
 
     <div class="form-group">
       <label>Bike Serial Number</label>
-      <input type="text" class="form-control" />
+      <input type="text" class="form-control" formControlName="serialNumber" />
     </div>
 
     <div class="form-group">
       <label>Purchase Price</label>
-      <input type="text" class="form-control" />
+      <input type="text" class="form-control" formControlName="purchasePrice" />
     </div>
 
     <div class="form-group">
       <label>Purchase Date</label>
-      <input type="text" class="form-control" />
+      <input type="text" class="form-control" formControlName="purchaseDate" />
     </div>
 
     <div class="form-group">
       <label>Contact (true | false)</label>
-      <input type="text" class="form-control" />
+      <select class="form-control" formControlName="contact" required>
+        <option value="selecciona">--Seleccione--</option>
+        <option value="true">Si</option>
+        <option value="false">No</option>
+      </select>
     </div>
+
+    <br>
+    <button type="submit" class="btn btn-primary">Enviar Formulario</button>
   </form>
 </div>
