add image service and use imagegallery component

--- a/Clase3-DirectivasYForms/bike-ui/src/app/components/imagegallery/imagegallery.component.html
+++ b/Clase3-DirectivasYForms/bike-ui/src/app/components/imagegallery/imagegallery.component.html
@@ -1,1 +1,13 @@
-<p>imagegallery works!</p>
+<div>
+  <div class="row">
+    <div class="col-sm-12 btn btn-primary">Image Gallery</div>
+  </div>
+
+  <div class="row">
+    <ul>
+      <li *ngFor="let image of allImages">
+        <img class="img" src="{{ image.url }}" alt="" />
+      </li>
+    </ul>
+  </div>
+</div>
